[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "causalcompass"
version = "0.1.2"
description = "Evaluating the Robustness of Time-Series Causal Discovery in Misspecified Scenarios"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Xiaojian Shen", email = "shenxj22@mails.jlu.edu.cn"},
  {name = "Huiyang Yi", email = "yihuiyang@seu.edu.cn"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy==1.26.4",        
    "pandas==1.5.3",
    "scipy==1.15.3",        
    "scikit-learn==1.6.1",
    "statsmodels==0.14.4",
    "networkx==3.4.2",
    "matplotlib==3.10.1",
    "tqdm==4.67.1",
    "omegaconf==2.3.0",
    "einops==0.8.1",
    "dcor==0.6",
    "torch==2.7.0",         
    "tensorboard==2.20.0",
    "jax==0.4.31",          
    "jaxlib==0.4.31",
    "jaxtyping==0.3.2",     
    "equinox==0.10.11",     
    "optax==0.1.9",         
    "chex==0.1.90",         
    "tigramite==5.2.8.2",
    "lingam==1.11.0",       
    "benchmark-mi==0.1.3",  
    "igraph==0.11.9"
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
"Homepage" = "https://github.com/huiyang-yi/CausalCompass"

[tool.setuptools.packages.find]
include = ["causalcompass*"]